@@ -59,17 +59,21 @@ static const struct
   X (BUSY,			EBUSY),
   X (BUS_RESET,			EIO),
   X (CALL_NOT_IMPLEMENTED,	ENOSYS),
+  X (CANCELLED,			EINTR),
   X (CANNOT_MAKE,		EPERM),
   X (CHILD_NOT_COMPLETE,	EBUSY),
   X (COMMITMENT_LIMIT,		EAGAIN),
+  X (CONNECTION_REFUSED,	ECONNREFUSED),
   X (CRC,			EIO),
   X (DEVICE_DOOR_OPEN,		EIO),
   X (DEVICE_IN_USE,		EAGAIN),
   X (DEVICE_REQUIRES_CLEANING,	EIO),
+  X (DEV_NOT_EXIST,		ENOENT),
   X (DIRECTORY,			ENOTDIR),
   X (DIR_NOT_EMPTY,		ENOTEMPTY),
   X (DISK_CORRUPT,		EIO),
   X (DISK_FULL,			ENOSPC),
+  X (DS_GENERIC_ERROR,		EIO),
   X (DUP_NAME,			ENOTUNIQ),
   X (EAS_DIDNT_FIT,		ENOSPC),
   X (EAS_NOT_SUPPORTED,		ENOTSUP),
@@ -115,6 +119,7 @@ static const struct
   X (NONPAGED_SYSTEM_RESOURCES,	EAGAIN),
   X (NOT_CONNECTED,		ENOLINK),
   X (NOT_ENOUGH_MEMORY,		ENOMEM),
+  X (NOT_ENOUGH_QUOTA,		EIO),
   X (NOT_OWNER,			EPERM),
   X (NOT_READY,			ENOMEDIUM),
   X (NOT_SAME_DEVICE,		EXDEV),
@@ -149,12 +154,15 @@ static const struct
   X (SETMARK_DETECTED,		EIO),
   X (SHARING_BUFFER_EXCEEDED,	ENOLCK),
   X (SHARING_VIOLATION,		EBUSY),
+  X (SERVICE_REQUEST_TIMEOUT,	EBUSY),
   X (SIGNAL_PENDING,		EBUSY),
   X (SIGNAL_REFUSED,		EIO),
   X (SXS_CANT_GEN_ACTCTX,	ELIBBAD),
   X (THREAD_1_INACTIVE,		EINVAL),
+  X (TIMEOUT,			EBUSY),
   X (TOO_MANY_LINKS,		EMLINK),
   X (TOO_MANY_OPEN_FILES,	EMFILE),
+  X (UNEXP_NET_ERR,		EIO),
   X (WAIT_NO_CHILDREN,		ECHILD),
   X (WORKING_SET_QUOTA,		EAGAIN),
   X (WRITE_PROTECT,		EROFS),
